@@ -65,16 +65,15 @@ Ready.
 [ 28@0,	"tnil",	"0"	]
 [ 29@0,	"batInserted",	"0"	]
 [ 30@0,	"ttop",	"0"	]
-[ 31@0,	"lastUsed",	"1107"	]
-[ 32@0,	"batCopiedtodisk",	"0"	]
-[ 33@0,	"batDirtydesc",	"dirty"	]
-[ 34@0,	"T->heap.dirty",	"clean"	]
-[ 35@0,	"tail.free",	"0"	]
-[ 36@0,	"tail.size",	"1024"	]
-[ 37@0,	"tail.storage",	"malloced"	]
-[ 38@0,	"tail.newstorage",	"malloced"	]
-[ 39@0,	"tail.filename",	"22.tail"	]
-[ 40@0,	"T->vheap->dirty",	"clean"	]
+[ 31@0,	"batCopiedtodisk",	"0"	]
+[ 32@0,	"batDirtydesc",	"dirty"	]
+[ 33@0,	"T->heap.dirty",	"clean"	]
+[ 34@0,	"tail.free",	"0"	]
+[ 35@0,	"tail.size",	"1024"	]
+[ 36@0,	"tail.storage",	"malloced"	]
+[ 37@0,	"tail.newstorage",	"malloced"	]
+[ 38@0,	"tail.filename",	"22.tail"	]
+[ 39@0,	"T->vheap->dirty",	"clean"	]
 #~EndVariableOutput~#
 #--------------------------#
 # h	t  # name
