@@ -1,6 +1,9 @@
 # ChangeLog file for MonetDB5
 # This file is updated with Maddlog
 
+* Tue Jul 26 2016 Sjoerd Mullender <sjoerd@acm.org>
+- Removed command bbp.getHeat().
+
 * Wed Jun 29 2016 Sjoerd Mullender <sjoerd@acm.org>
 - Removed bat.setColumn with two arguments and bat.setRole.  Use
   bat.setColumn with one argument instead.
